--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,7 +64,25 @@ dependencies {
     def nav_version = "2.5.1"
     implementation("androidx.navigation:navigation-compose:$nav_version")
 
+    //Socket.io
+    implementation ('io.socket:socket.io-client:2.0.0'){
+        //noinspection DuplicatePlatformClasses
+        exclude group: 'org.json', module: 'json'
+    }
+
     //retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation "com.squareup.okhttp3:okhttp:5.0.0-alpha.2"
+    implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2"
+
+    //Serialisation
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.2.2"
+
+    //runtime liveDate
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+
+    // Coroutine Lifecycle Scopes
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
 }
